Bug: Fix for overflow

--- a/components/layout/Layout/Layout.module.css
+++ b/components/layout/Layout/Layout.module.css
@@ -1,5 +1,6 @@
 .container {
-  @apply flex flex-col w-full min-h-screen;
+  max-width: 100vw;
+  @apply flex flex-col w-full min-h-screen overflow-x-hidden;
 }
 
 .main {
